Fix file and folder casing for CI and maintainability
Fix file and folder casing for CI and maintainability